--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="b5kDjm6RjITWWKU4qilxcrnWz3Vyv0r1tqkax2TLsog" />
   <meta name="msvalidate.01" content="5FACA73FF35374DD33B32B689BAEED72" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
