--- a/index.html
+++ b/index.html
@@ -5,6 +5,119 @@
   <meta name="msvalidate.01" content="5FACA73FF35374DD33B32B689BAEED72" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  <!-- Primary SEO Meta Tags -->
+  <title>CodeCrafter's Hub – Premium AI Code Templates & Automation Tools | 7,300+ Developers</title>
+  <meta name="description" content="Get ready-to-deploy AI code templates, WhatsApp automation bots, crypto trading systems, and SaaS starter kits. Join 7,300+ developers building faster with our premium code library. Instant download, lifetime updates.">
+  <meta name="keywords" content="AI code templates, automation tools, WhatsApp bot code, crypto trading bot, SaaS starter kit, ready-made code, developer templates, AI automation, business automation, code marketplace, premium code">
+  
+  <!-- Author and Copyright -->
+  <meta name="author" content="CodeCrafter's Hub">
+  <meta name="copyright" content="CodeCrafter's Hub">
+  
+  <!-- Search Engine Indexing -->
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://codecraftershub.vercel.app/">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://codecraftershub.vercel.app/">
+  <meta property="og:title" content="CodeCrafter's Hub – Premium AI Code Templates & Automation Tools">
+  <meta property="og:description" content="Get ready-to-deploy AI code templates, WhatsApp automation bots, crypto trading systems, and SaaS starter kits. Join 7,300+ developers building faster with our premium code library.">
+  <meta property="og:image" content="https://codecraftershub.vercel.app/images/social-preview.jpg">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CodeCrafter's Hub – Premium AI Code Templates & Automation Tools">
+  <meta name="twitter:description" content="Get ready-to-deploy AI code templates, WhatsApp automation bots, crypto trading systems, and SaaS starter kits. Join 7,300+ developers building faster with our premium code library.">
+  <meta name="twitter:image" content="https://codecraftershub.vercel.app/images/social-preview.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  
+  <!-- Structured Data for Rich Snippets -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CodeCrafter's Hub",
+    "url": "https://codecraftershub.vercel.app/",
+    "description": "Premium AI & Automation Code Templates Trusted by 7,300+ Developers Worldwide",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://codecraftershub.vercel.app/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CodeCrafter's Hub",
+    "url": "https://codecraftershub.vercel.app/",
+    "logo": "https://codecraftershub.vercel.app/images/logo.png",
+    "sameAs": [
+      "https://twitter.com/codecraftershub",
+      "https://github.com/codecraftershub"
+    ]
+  }
+  </script>
+  
+  <!-- Page-Specific Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "Product",
+          "name": "WhatsApp Business Suite",
+          "description": "Complete messaging automation for e-commerce with CRM integration and abandoned cart recovery.",
+          "offers": {
+            "@type": "Offer",
+            "price": "75",
+            "priceCurrency": "USD"
+          }
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "Product",
+          "name": "Crypto Signals Pro",
+          "description": "Real-time trading alerts with technical analysis for Bitcoin and major altcoins.",
+          "offers": {
+            "@type": "Offer",
+            "price": "79",
+            "priceCurrency": "USD"
+          }
+        }
+      }
+    ]
+  }
+  </script>
   <title>CodeCrafter's Hub – Premium AI & Automation Tools</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
